--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -1,13 +1,13 @@
-name: CI/CD Workflow
+name: Deploy
 
 on:
   push:
-  repository_dispatch:
-    types: [run_ci-cd]
+    branches:
+      - master
 
 jobs:
-  assemble:
-    name: Assemble JAR
+  build:
+    name: Build
     runs-on: ubuntu-latest
 
     steps:
@@ -19,62 +19,41 @@ jobs:
         with:
           java-version: 11
 
-      - name: Build with Gradle
-        run: ./gradlew assemble
+      - name: Build with Maven
+        run: mvn clean install
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v2
         with:
           name: app-jar
-          path: build/libs/*.jar
+          path: ./application/target/*-uber.jar
 
-  check:
-    name: Perform checks
+  backup-artifacts:
+    name: Backup build artifacts
+    needs: build
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+      - name: Download build artifacts
+        uses: actions/download-artifact@v2
         with:
-          java-version: 11
+          path: build-artifacts
 
-      - name: Run Gradle checks
-        run: ./gradlew check -x test
-
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v2
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          name: reports
-          path: build/reports
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-2
 
-  test:
-    name: Run automated tests
-    runs-on: ubuntu-latest
+      - name: Backup build artifacts
+        run: |
+          workflow=$(echo ${{ github.workflow }} | sed -e 's/\W/-/g' -e 's/\(.*\)/\L\1/')
+          aws s3 sync build-artifacts s3://tis-build-artifacts/${{ github.event.repository.name }}/$workflow/${{ github.run_number }}
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-
-      - name: Run Gradle tests
-        run: ./gradlew test
-
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: reports
-          path: build/reports
-
-  analyze:
-    name: Perform quality analysis
-    needs: [check, test]
+  dockerize:
+    name: Dockerize
+    needs: build
     runs-on: ubuntu-latest
 
     steps:
@@ -84,114 +63,78 @@ jobs:
       - name: Download build artifact
         uses: actions/download-artifact@v2
         with:
-          name: reports
-          path: build/reports
+          name: app-jar
+          path: application/target
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          java-version: 11
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-2
 
-      - name: Run quality analysis
+      - name: Log in to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Build, tag and push image to Amazon ECR
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew sonarqube
+          ECR_REPOSITORY: tis-hee-concerns
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
 
-# TODO: Uncomment the below jobs.
-#  backup-artifacts:
-#    name: Backup build artifacts
-#    needs: [assemble, check, test]
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Download build artifacts
-#        uses: actions/download-artifact@v2
-#        with:
-#          path: build-artifacts
-#
-#      - name: Configure AWS credentials
-#        uses: aws-actions/configure-aws-credentials@v1
-#        with:
-#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#          aws-region: eu-west-2
-#
-#      - name: Backup build artifacts
-#        run: |
-#          workflow=$(echo ${{ github.workflow }} | sed -e 's/\W/-/g' -e 's/\(.*\)/\L\1/')
-#          aws s3 sync build-artifacts s3://tis-build-artifacts/${{ github.event.repository.name }}/$workflow/${{ github.run_number }}
-#
-#  dockerize:
-#    name: Dockerize
-#    needs: [assemble]
-#    runs-on: ubuntu-latest
-#    if: github.ref == 'refs/heads/master'
-#
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#
-#      - name: Download build artifact
-#        uses: actions/download-artifact@v2
-#        with:
-#          name: app-jar
-#          path: build/libs
-#
-#      - name: Configure AWS credentials
-#        uses: aws-actions/configure-aws-credentials@v1
-#        with:
-#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#          aws-region: eu-west-2
-#
-#      - name: Log in to Amazon ECR
-#        id: login-ecr
-#        uses: aws-actions/amazon-ecr-login@v1
-#
-#      - name: Build, tag and push image to Amazon ECR
-#        env:
-#          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-#          ECR_REPOSITORY: ${{ github.event.repository.name }}
-#        run: |
-#          ./gradlew bootBuildImage --imageName=$ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }}
-#          docker tag $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }} $ECR_REGISTRY/$ECR_REPOSITORY:latest
-#          docker push $ECR_REGISTRY/$ECR_REPOSITORY
-#
-#  deploy:
-#    name: Deploy
-#    needs: dockerize
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#
-#      - name: Configure AWS credentials
-#        uses: aws-actions/configure-aws-credentials@v1
-#        with:
-#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#          aws-region: eu-west-2
-#
-#      - name: Log in to Amazon ECR
-#        id: login-ecr
-#        uses: aws-actions/amazon-ecr-login@v1
-#
-#      - name: Fill in the new image ID in the Amazon ECS task definition
-#        id: task-def
-#        uses: aws-actions/amazon-ecs-render-task-definition@v1
-#        with:
-#          task-definition: .aws/task-definition.json
-#          container-name: ${{ github.event.repository.name }}
-#          image: ${{ steps.login-ecr.outputs.registry }}/${{ github.event.repository.name }}:${{ github.sha }}
-#
-#      - name: Deploy Amazon ECS task definition
-#        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-#        with:
-#          task-definition: ${{ steps.task-def.outputs.task-definition }}
-#          # TODO: service name if different
-#          service: ${{ github.event.repository.name }
-#          # TODO: cluster name
-#          cluster:
-#          wait-for-service-stability: true
+  deploy:
+    name: Deploy
+    needs: dockerize
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-2
+
+      - name: Log in to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Fill in the new image ID in the Amazon ECS task definition
+        id: task-def
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: .aws/task-definition.json
+          container-name: reval-be
+          image: ${{ steps.login-ecr.outputs.registry }}/tis-revalidation-concerns:${{ github.sha }}
+
+      - name: Deploy Amazon ECS task definition
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ${{ steps.task-def.outputs.task-definition }}
+          service: concerns
+          cluster: revalidation-preprod
+          wait-for-service-stability: false
+
+      - name: Slack Notification success
+        if: success()
+        uses: rtCamp/action-slack-notify@v2.0.0
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_TITLE: 'TIS-HEE-REVALIDATION has been deployed through the pipeline'
+
+      - name: Slack Notification failure
+        if: failure()
+        uses: rtCamp/action-slack-notify@v2.0.0
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_TITLE: "TIS-HEE-REVALIDATION build has failed in the pipeline"
+          SLACK_COLOR: "#fc1303"
