--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -9,3 +9,8 @@ server:
   servlet:
     context-path: /concerns
   port: ${SERVICE_PORT:8087}
+
+app:
+  concern:
+    revalidation:
+      url: ${REVALIDATION_URL:http://localhost:8080/revalidation/api}
