--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -4,6 +4,10 @@ spring:
     active: ${SPRING_PROFILE:local}
   application:
     name: tis-revalidation-concerns
+  data:
+    mongodb:
+      uri: mongodb://${MONGODB_USERNAME:root}:${MONGODB_PASSWORD:password}@${MONGODB_HOST:localhost}:${MONGODB_PORT:27017}/${MONGODB_DATABASE:concerns}?authSource=admin&authMechanism=SCRAM-SHA-1
+
 
 server:
   servlet:
