--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <java.version>11</java.version>
     <spring-boot.version>2.2.5.RELEASE</spring-boot.version>
     <lombok.version>1.18.12</lombok.version>
+    <javafaker.version>1.0.2</javafaker.version>
     <springfox-swagger.version>2.9.2</springfox-swagger.version>
     <sentry.version>1.7.30</sentry.version>
   </properties>
@@ -74,6 +75,13 @@
       </dependency>
 
       <!-- testing -->
+
+      <dependency>
+        <groupId>com.github.javafaker</groupId>
+        <artifactId>javafaker</artifactId>
+        <version>${javafaker.version}</version>
+        <scope>test</scope>
+      </dependency>
 
       <dependency>
         <groupId>org.springframework.boot</groupId>
