fix: change ecr repo name to tis-revalidation-concerns

--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -79,7 +79,7 @@ jobs:
 
       - name: Build, tag and push image to Amazon ECR
         env:
-          ECR_REPOSITORY: tis-hee-concerns
+          ECR_REPOSITORY: tis-revalidation-concerns
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
