--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
   <packaging>pom</packaging>
   <modules>
     <module>application</module>
+    <module>integration-tests</module>
   </modules>
 
   <parent>
@@ -25,6 +26,8 @@
     <spring-boot.version>2.3.1.RELEASE</spring-boot.version>
     <lombok.version>1.18.12</lombok.version>
     <javafaker.version>1.0.2</javafaker.version>
+    <wiremock.version>2.26.0</wiremock.version>
+    <hamcrest.version>1.3</hamcrest.version>
     <springfox-swagger.version>2.9.2</springfox-swagger.version>
     <sentry.version>1.7.30</sentry.version>
   </properties>
@@ -77,6 +80,23 @@
       <!-- testing -->
 
       <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-test</artifactId>
+        <version>${spring-boot.version}</version>
+        <scope>test</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+
+      <dependency>
         <groupId>com.github.javafaker</groupId>
         <artifactId>javafaker</artifactId>
         <version>${javafaker.version}</version>
@@ -84,9 +104,16 @@
       </dependency>
 
       <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-test</artifactId>
-        <version>${spring-boot.version}</version>
+        <groupId>com.github.tomakehurst</groupId>
+        <artifactId>wiremock</artifactId>
+        <version>${wiremock.version}</version>
+        <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-all</artifactId>
+        <version>${hamcrest.version}</version>
         <scope>test</scope>
       </dependency>
 
