--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
   // Spring Boot starters
   implementation "org.springframework.boot:spring-boot-starter-actuator"
   implementation "org.springframework.boot:spring-boot-starter-web"
+  implementation "org.springframework.boot:spring-boot-starter-data-mongodb"
   testImplementation("org.springframework.boot:spring-boot-starter-test") {
     exclude group: "org.junit.vintage", module: "junit-vintage-engine"
   }
@@ -43,6 +44,9 @@ dependencies {
 
   // Sentry reporting
   compile "io.sentry:sentry-spring:1.7.30"
+  implementation "com.github.javafaker:javafaker:1.0.2"
+  implementation "io.springfox:springfox-swagger2:2.9.1"
+  implementation "io.springfox:springfox-swagger-ui:2.9.1"
 }
 
 checkstyle {
@@ -62,8 +66,7 @@ sonarqube {
     property "sonar.host.url", "https://sonarcloud.io"
     property "sonar.login", System.getenv("SONAR_TOKEN")
     property "sonar.organization", "health-education-england"
-    // TODO: Update sonar.projectKey to real value.
-    property "sonar.projectKey", "Health-Education-England_tis-microservice-template"
+    property "sonar.projectKey", "Health-Education-England_tis-revalidation-concerns"
 
     property "sonar.java.checkstyle.reportPaths",
       "build/reports/checkstyle/main.xml,build/reports/checkstyle/test.xml"
