--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -135,7 +135,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: app-jar
-          path: application/target
+          path: build/libs
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
