--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,8 @@ plugins {
   id "org.sonarqube" version "2.8"
 }
 
-// TODO: Update group to end with "admin" or "trainee".
-group = "uk.nhs.hee.tis"
-version = "0.0.1"
+group = "uk.nhs.hee.tis.revalidation"
+version = "0.1.0"
 sourceCompatibility = "11"
 
 configurations {
@@ -29,6 +28,7 @@ dependencies {
   implementation "org.springframework.boot:spring-boot-starter-actuator"
   implementation "org.springframework.boot:spring-boot-starter-web"
   implementation "org.springframework.boot:spring-boot-starter-data-mongodb"
+
   testImplementation("org.springframework.boot:spring-boot-starter-test") {
     exclude group: "org.junit.vintage", module: "junit-vintage-engine"
   }
@@ -44,9 +44,11 @@ dependencies {
 
   // Sentry reporting
   compile "io.sentry:sentry-spring:1.7.30"
+
   implementation "com.github.javafaker:javafaker:1.0.2"
   implementation "io.springfox:springfox-swagger2:2.9.1"
   implementation "io.springfox:springfox-swagger-ui:2.9.1"
+  implementation "com.amazonaws:aws-java-sdk-cognitoidp:1.11.835"
 }
 
 checkstyle {
