--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,7 @@ plugins {
   id "org.sonarqube" version "2.8"
 }
 
-// TODO: Update group to end with "admin" or "trainee".
-group = "uk.nhs.hee.tis"
+group = "uk.nhs.hee.tis.revalidation"
 version = "0.0.1"
 sourceCompatibility = "11"
 
@@ -43,7 +42,7 @@ dependencies {
   testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.3.1.Final"
 
   // Sentry reporting
-  compile "io.sentry:sentry-spring:1.7.30"
+  implementation "io.sentry:sentry-spring:1.7.30"
   implementation "com.github.javafaker:javafaker:1.0.2"
   implementation "io.springfox:springfox-swagger2:2.9.1"
   implementation "io.springfox:springfox-swagger-ui:2.9.1"
