--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,10 @@ dependencies {
   testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.3.1.Final"
 
   // Sentry reporting
-  implementation "io.sentry:sentry-spring:1.7.30"
+  ext.sentryVersion = "3.1.1"
+  implementation "io.sentry:sentry-spring-boot-starter:$sentryVersion"
+  implementation "io.sentry:sentry-logback:$sentryVersion"
+
   implementation "com.github.javafaker:javafaker:1.0.2"
   implementation "io.springfox:springfox-swagger2:2.9.1"
   implementation "io.springfox:springfox-swagger-ui:2.9.1"
