--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,7 @@ app:
   concern:
     revalidation:
       url: ${REVALIDATION_URL:http://localhost:8080/revalidation/api}
+
+sentry:
+  dsn: ${SENTRY_DSN:}
+  environment: ${SENTRY_ENVIRONMENT:}
