--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2.1.0
         with:
+          distribution: adopt
           java-version: 11
 
       - name: Build with Gradle
@@ -39,6 +40,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2.1.0
         with:
+          distribution: adopt
           java-version: 11
 
       - name: Run Gradle checks
@@ -61,6 +63,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2.1.0
         with:
+          distribution: adopt
           java-version: 11
 
       - name: Run Gradle tests
@@ -90,6 +93,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2.1.0
         with:
+          distribution: adopt
           java-version: 11
 
       - name: Run quality analysis
